Add styling and instructions to game interface
- Create styles.css for visual enhancements
- Include game instructions in HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css" />
     <title>Rock Paper Scissors</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>Rock Paper Scissors Game</h1>
+      <p>
+        Open your browser console to play the game. Follow the prompts in the
+        console to make your choices.
+      </p>
+      <p>
+        Press F12 or right-click and select "Inspect" to open the developer
+        tools, then navigate to the "Console" tab.
+      </p>
+    </div>
+  </body>
 </html>
