--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css" />
     <title>Rock Paper Scissors</title>
   </head>
@@ -18,6 +18,10 @@
         Press F12 or right-click and select "Inspect" to open the developer
         tools, then navigate to the "Console" tab.
       </p>
+
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
     </div>
   </body>
 </html>
