--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <button id="rock">Rock</button>
       <button id="paper">Paper</button>
       <button id="scissors">Scissors</button>
+
+      <div id="results"></div>
     </div>
   </body>
 </html>
