--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <button id="scissors">Scissors</button>
 
       <div id="results"></div>
+      <div id="score"></div>
     </div>
   </body>
 </html>
