Add Font Awesome icons to buttons and enhance styling for better UI experience

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Rock Paper Scissors</title>
   </head>
@@ -24,9 +31,11 @@
 
       <!-- Buttons Section -->
       <div class="buttons">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <button id="rock"><i class="fas fa-hand-rock"></i> Rock</button>
+        <button id="paper"><i class="fas fa-hand-paper"></i> Paper</button>
+        <button id="scissors">
+          <i class="fas fa-hand-scissors"></i> Scissors
+        </button>
       </div>
     </div>
 
@@ -45,11 +54,10 @@
         <script>
           document.write(new Date().getFullYear());
         </script>
-        Bryan Chow Wei Qian
+        <a href="https://github.com/BryanChow0112" target="_blank"
+          >Bryan Chow Wei Qian</a
+        >
       </p>
-      <a href="https://github.com/BryanChow0112" target="_blank">
-        <i class="fab fa-github"></i>
-      </a>
     </footer>
   </body>
 </html>
